[tool.poetry]
name = "exercise_2"
version = "0.1.0"
description = ""
authors = ["Luciano Naveiro"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.26.0"
tqdm = "4.60.0"
pandas = "1.2.3"
SQLAlchemy = "1.4.35"
psycopg2-binary = "2.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
typing-extensions = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
