[tool.poetry]
name = "exercise_4"
version = "0.1.0"
description = ""
authors = ["Luciano Naveiro"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4.35"
psycopg2-binary = "2.9.1"
pandas = "1.2.3"
jupyter = "1.0.0"
matplotlib = "3.4.1"
holidays = "0.13"
scikit-learn = "0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
